[#MODX-847] Fixed text and img alignment.

--- a/assets/plugins/qm/res/style.css
+++ b/assets/plugins/qm/res/style.css
@@ -43,7 +43,7 @@
 #qmEditor .qmButton img {
 	margin-top:1px;
 	margin-right: 2px;
-	vertical-align:top;
+	vertical-align: text-bottom;
 }
 
 #qmEditor .qmButton:hover {
